plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'net.watchbox'
version = 'v1.9.x-beta'
description = 'watchbox backend server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Netty DNS resolver for macOS ARM64
    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.104.Final:osx-aarch_64'

    // TMDB API dependencies
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.fasterxml.jackson.core:jackson-databind' // JSON 처리

    // Spring Security, OAuth2, JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // Web Push
    implementation 'nl.martijndwars:web-push:5.1.1'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'

    // AWS S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // Micrometer → OTLP push (Redis/MySQL/Kafka/HikariCP/JVM 메트릭)
    implementation 'io.micrometer:micrometer-registry-otlp'
    // Spring Boot 전용 OTel 스타터
    implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.10.0'
    // Tracing (Micrometer Tracing + OTel)
    implementation 'io.micrometer:micrometer-tracing-bridge-otel' // Micrometer → OTel 브릿지
    // Pyroscope OTel Exporter (Pyroscope로 메트릭/트레이스 전송)
    implementation 'io.pyroscope:agent:2.5.2'
    implementation 'io.pyroscope:otel:2.0.1'

//    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'           // OTLP exporter (Collector로 전송)
//    // Logs — OTel Logback appender
//    implementation 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.10.0-alpha'
}

tasks.named('test') {
    useJUnitPlatform()
}
